--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,4 +24,13 @@ travel.label.creator=Creator travel
 travel.label.action=Action
 
 --user
-
+users.label.firstName=First Name
+users.label.lastName=Last Name
+users.label.email=Email
+users.label.username=Username
+users.label.password=Password
+users.label.phoneNumber=Phone Number
+users.label.isAdmin=Is Admin
+user.label.choice.Admin=Make Admin
+users.label.isBlocked=Banned
+user.label.choice.Blocked=Ban User
