Update admin page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,3 +34,10 @@ users.label.isAdmin=Is Admin
 user.label.choice.Admin=Make Admin
 users.label.isBlocked=Banned
 user.label.choice.Blocked=Ban User
+user.label.filter=Filter Options
+user.title.isEmpty=No Users
+user.title.notEmpty=All Users
+
+
+
+
