--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,8 +2,13 @@
 
 travels.title.empty=No Travel
 travels.title.notEmpty=All Travel
+travels.title.emptyDriver=No Travel by driver
+travels.title.notEmptyDriver=All Travel by driver
 travels.title.notCandidate=No candidate Travel
 travels.title.candidate=All candidate Travel
+
+travel.completed.empty=Not travels completed
+travel.completed.notEmpty=Completed travel  
 
 travel.label.create=Create new Travel
 travel.label.update=Update Travel
@@ -19,7 +24,10 @@ travel.label.canceled=Travel canceled
 travel.label.kilometers=Travel km
 travel.label.additionalOptions=Additional Options
 travel.label.filter = Travel Filter
-travel.label.creator=Creator travel
+travel.label.creator=Creator 
+travel.label.seats=Empty seats
+travel.label.dosNotExist=-
+travel.label.check='v'
 
 travel.label.action=Action
 
