--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,6 +39,7 @@ users.label.username=Username
 users.label.password=Password
 users.label.phoneNumber=Phone Number
 users.label.isAdmin=Is Admin
+users.label.isBanned=Is Banned
 user.label.choice.Admin=Make Admin
 users.label.isBlocked=Banned
 user.label.choice.Blocked=Ban User
