--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,6 +47,8 @@ user.label.filter=Filter Options
 user.title.isEmpty=No Users
 user.title.notEmpty=All Users
 
-
+additionaloptions.label.create = Create new additional option
+additionaloptions.label.update = Update additional option
+additionaloptions.label.content = Content
 
 
